# brass-birmingbot

./: .AGENTS.md  .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  check_registry.go  cloudbuild.yaml  game_rules.md  go.mod  main.go
.agents/rules/: brass_rl_engine.md
dashboard-v2/: .AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard-v2/public/data/: industry_tiles.json  map_graph.json  map_industries.json  mercantile_tiles.json
dashboard-v2/src/: App.tsx  constants.ts  index.css  types.ts
dashboard-v2/src/components/Analytics/: StrategyHub.tsx
dashboard-v2/src/components/Map/: GameBoard.tsx
dashboard-v2/src/components/Navigation/: GameHUD.tsx  StepFooter.tsx
engine/: .AGENTS.md  actions.go  board.go  cards.go  cexport.go  deck.go  env.go  env_test.go  game.go  industries.go  industry_tiles.json  map.go  map_graph.json  market.go  market_test.go  masking.go  mercantile_tiles.json  merchants.go  network.go  observation.go  observation_test.go  player.go  resources.go  rules_actions_test.go  rules_build_test.go  rules_state_test.go  scoring.go  state.go  types.go
engine/cshared/: main.go
legacy/server/: main.go
python/: .AGENTS.md  config.py  gcs_utils.py  pyproject.toml  test_agent.py  train.py  utils.py
python/brass_env/: __init__.py  brass_engine.h  env.py  server.py
server/: .AGENTS.md  main.go
terraform/: main.tf  outputs.tf  variables.tf
