[project]
name = "brass-rl"
version = "0.1.0"
description = "Brass Birmingham RL training environment"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "torch>=2.2.0",
    "stable-baselines3>=2.4.0",
    "sb3-contrib>=2.4.0",
    "tensorboard>=2.15.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brass_env"]

